--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,10 +65,11 @@ body{
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 30vh;
   max-width: 600px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .message {
