--- a/src/app/components/Intro.css
+++ b/src/app/components/Intro.css
@@ -9,7 +9,7 @@
 .typing-indicator {
   display: flex;
   gap: 0.25rem;
-  animation: typing-indicator 1s infinite, fade-out 2s 2s forwards;
+  animation: typing-indicator 0.5s infinite, fade-out 1s 1s forwards;
 }
 
 .dot {
@@ -17,28 +17,31 @@
   height: 3rem;
   background-color: #333;
   border-radius: 50%;
-  animation: typing-indicator 1s infinite;
+  animation: typing-indicator 0.5s infinite;
 }
 
 .dot:nth-child(2) {
-  animation-delay: 0.2s;
+  animation-delay: 0.1s;
 }
 
 .dot:nth-child(3) {
-  animation-delay: 0.4s;
+  animation-delay: 0.2s;
 }
 
 .text {
   font-size: 5rem;
   white-space: nowrap;
   border-right: 0.15em solid;
-  animation: typing 4s steps(33) 2s forwards, blink 0.5s step-end 4s backwards, upwards 1.2s 6s forwards;
+  animation: typing 2s steps(33) 1s forwards, blink 0.5s step-end 2s backwards,
+    upwards 1s 3s forwards;
   opacity: 0;
   animation-fill-mode: forwards;
 }
 
 @keyframes typing-indicator {
-  0%, 60%, 100% {
+  0%,
+  60%,
+  100% {
     opacity: 1;
     transform: translateY(0);
   }
@@ -60,10 +63,11 @@
 }
 
 @keyframes blink {
-  0%, 100% {
+  0%,
+  100% {
     border-color: transparent;
   }
-  50%{
+  50% {
     border-color: black;
   }
 }
@@ -82,6 +86,6 @@
     transform: translateY(0);
   }
   100% {
-    transform: translateY(-25vh); 
+    transform: translateY(-25vh);
   }
 }
