--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -145,4 +145,10 @@ button:hover {
 
 .summary{
   color: black;
+  flex-direction: column;
+  align-items: center;
+}
+
+.postSendButton{
+  margin: 0.5rem 9rem;
 }
